--- a/inicio.html
+++ b/inicio.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <div>
-        Hola Ivan
+        Hola Ivan, todo bien
     </div>
 <p>MI PRIMER&nbsp;PROYECTO WEB</p>
 </body>
